--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- OPEN GRAPH (for X, Discord, etc.) -->
   <meta property="og:title" content="Moth's Website - Anime Rap & AI Roleplay Hub">
   <meta property="og:description" content="Listen to my playlist, chat with my JanitorAI bots, and vibe with Windows 7 Aero design.">
-  <meta property="og:image" content="https://i.imgur.com/8z3kW8P.jpg"> <!-- fallback wallpaper -->
+  <meta property="og:image" content="https://postimg.cc/hhwspQtq"> <!-- fallback wallpaper -->
   <meta property="og:url" content="https://your-site.vercel.app">
   <meta property="og:type" content="website">
 
