--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </a>
 
     <h2>Social Media</h2>
-    <a href="https://twitter.com/YOUR_HANDLE" target="_blank" rel="noopener">Follow me on X</a>
+    <a href="https://x.com/MindOnPause" target="_blank" rel="noopener">Follow me on X</a>
 
     <h2>JanitorAI</h2>
     <a href="https://janitorai.com/my_characters" target="_blank" rel="noopener">
